--- a/home.html
+++ b/home.html
@@ -160,7 +160,7 @@
             </span>
         </section>
 
-        <!-- SKILL AND RESUME SECTION -->
+        <!-- SKILL SECTION -->
         <section class="row justify-content-center fade-in m-top-big" id="skills-section">
 
             <!-- BACKGROUND -->
@@ -207,16 +207,15 @@
             <!-- <span class="col-12 text-center p-top-small z-ind header-2" id="skills-header">SKILLS</span> -->
         </section>
 
-        <!-- WORKS THUMBNAIL -->
-        <section class="row justify-content-center p-top-big" id="works-section">
-            <span class="col-12 text-center header-2" id="works-header">Portfolio</span>
-            <div class="p-top-small col-12 fade-in">
-                <div class="row justify-content-center">
+        <!-- WORKS PORTFOLIO THUMBNAIL -->
+        <section class="row justify-content-center align-content-center p-top-big" id="works-section">
+            <span class="col-12 text-center header-2 align-self-start" id="works-header">Portfolio</span>
+            <div class="p-top-small col-12 fade-in align-self-stretch">
+                <div class="row justify-content-around">
 
                             <!--  -->
-                            <div class="card">
-                                <div
-                                    class="card-wid works-border b-radius-6 justify-content-center align-items-center ">
+                            <div class="col-md-4 ">
+                                <div class="card-wid works-border b-radius-6 justify-content-center align-items-center ">
                                     <div class="card work-img-border work-thumbnail-image b-radius-6">
                                         <img class="card-img b-radius-6 " src="imgs/Work-thumbnails/JHR webpage.png"
                                             alt="work 3">
